Fix blurry modals and magazine sizes

--- a/resources/css/custom-position.css
+++ b/resources/css/custom-position.css
@@ -6,5 +6,5 @@
 .translate-center {
     top: 50%;
     left: 50%;
-    transform: translate3d(-50%, -50%, 0);
+    transform: translate(-50%, -50%);
 }
